@@ -1,5 +1,15 @@
 2008-06-19  Justin Garcia  <justin.garcia@apple.com>
 
+        Reviewed by Oliver.
+        
+        <https://bugs.webkit.org/show_bug.cgi?id=16049>
+        execCommand('backColor') fails on collapsed selections
+
+        * editing/execCommand/16049-expected.txt: Added.
+        * editing/execCommand/16049.html: Added.
+
+2008-06-19  Justin Garcia  <justin.garcia@apple.com>
+
         Reviewed by John.
         
         https://bugs.webkit.org/show_bug.cgi?id=19653
